--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/EnrollCourses/Enroll.cshtml
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/EnrollCourses/Enroll.cshtml
@@ -73,6 +73,8 @@
                     <div class="col-md-8">
                         @Html.EditorFor(model => model.EnrollDate, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.EnrollDate, "", new { @class = "text-danger" })
+                        <label id="dateErrorMessage" style="color: red"></label>
+                        
                     </div>
                 </div>
 
@@ -101,17 +103,12 @@
 
 
 @section Scripts {
-    @*<script src="~/Scripts/jquery-3.3.1.js"></script>*@
+    <script src="~/Scripts/jquery-3.3.1.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/Scripts/jquery-ui.min.js"></script>
     <script>
     $(document).ready(function() {
-
-
-
-
-
         $("#Registrations").change(function () {
             var studentId = $("#Registrations").val();
             var parameter = { studentId: studentId };
@@ -146,11 +143,6 @@
                     }
                 });
 
-                if (studentId == 0) {
-                        $("#Student_Name").val("");
-                        $("#Student_Email").val("");
-                        $("#Student_Department_Name").val("");
-                    }
                 return false;
 
             });
@@ -165,7 +157,12 @@
             var studentId = $("#Registrations").val();
             
             var date = $("#EnrollDate").val();
-            
+            if (date == "")
+            {
+                $("#dateErrorMessage").text("Select Date");
+                return false;
+            }
+
             var courseId = $("#CourseId").val();
 
             var jsonData = { studentId: studentId, courseId: courseId };
