--- a/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Student/Register.cshtml
+++ b/University-Management-Final-Project/UniversityManagement/UniversityManagement/Views/Student/Register.cshtml
@@ -50,8 +50,10 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.Date, new { @class = "form-control", @id = "datepicker" })
-                        @Html.ValidationMessageFor(model => model.Date)
+                        @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
+                        <label id="dateErrorMessage" style="color: red"></label>
+
                     </div>
                 </div>
 
@@ -66,7 +68,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.DepartmentId, "Department", htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.DropDownList("DepartmentId", null," -- Select Department -- ", htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownList("DepartmentId", null, " -- Select Department -- ", htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.DepartmentId, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -89,7 +91,6 @@
     </div>*@
 
 @section Scripts{
-    <script src="~/Scripts/jquery-3.3.1.js"></script>
     <script src="~/Scripts/jquery.validate.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/Scripts/jquery-ui.js"></script>
